# weather-app

./: CMakeLists.txt  main.cpp
domain/: Weather.cpp  Weather.h
gui/: ChartWindow.cpp  ChartWindow.h  MainWindow.cpp  MainWindow.h  WeatherWindow.cpp  WeatherWindow.h
tools/: Protocol.cpp  Protocol.h  Service.cpp  Service.h  Validator.cpp  Validator.h
